lib_LTLIBRARIES = libopenmbvtinyxml.la
INCLUDES = -DTIXML_USE_STL
libopenmbvtinyxml_la_SOURCES = tinyxml-src/tinynamespace.cpp \
  tinyxml-src/tinystr.cpp \
  tinyxml-src/tinyxml.cpp \
  tinyxml-src/tinyxmlerror.cpp \
  tinyxml-src/tinyxmlparser.cpp

EXTRA_DIST = tinyxml-src/changes.txt tinyxml-src/readme.txt
