lib_LTLIBRARIES = libopenmbvtinyxml.la
INCLUDES = -DTIXML_USE_STL
libopenmbvtinyxml_la_SOURCES = ../openmbvcppinterface/openmbvcppinterfacetinyxml/tinynamespace.cpp \
  ../openmbvcppinterface/openmbvcppinterfacetinyxml/tinystr.cpp \
  ../openmbvcppinterface/openmbvcppinterfacetinyxml/tinyxml.cpp \
  ../openmbvcppinterface/openmbvcppinterfacetinyxml/tinyxmlerror.cpp \
  ../openmbvcppinterface/openmbvcppinterfacetinyxml/tinyxmlparser.cpp
