octavedir = @datadir@/@PACKAGE@/octave
octaveSwigRefdir = @datadir@/@PACKAGE@/octave/@swig_ref

# list in here all octave m-files which should be accessible
# by the preprocessor
dist_octave_DATA = cardan.m \
		   rotateAboutX.m\
		   rotateAboutY.m\
		   rotateAboutZ.m\
		   euler.m\
		   tilde.m\
		   installPrefix.m\
		   rgbColor.m\
		   namedColor.m\
		   invCardan.m\
		   mbxmlutils_load.m\
		   PKG_ADD

dist_octaveSwigRef_DATA = @swig_ref/horzcat.m\
                          @swig_ref/vertcat.m

TESTS = testsymbolic.sh
